--- a/menu.html
+++ b/menu.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>首頁｜六角西餐廳</title>
+    <title>菜單｜六角西餐廳</title>
     <link rel="stylesheet" href="css/all.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
     <link rel="icon" href="https://www.hexschool.com/favicon.ico">
