--- a/register.html
+++ b/register.html
@@ -105,7 +105,7 @@
         </div>
     </div>
 
-    <script src="../jQuery/js/jquery-3.5.1.min.js"></script>
+    <script src="js/jquery-3.5.1.min.js"></script>
     <script src="js/all.js"></script>
     </div>
 
